# src/routes/categories.routes.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import multer from 'multer';
 
-import CreateCategoryController from '../modules/cars/useCases/createCategory/CreateCategoryController'
+import CreateCategoryController from '../modules/cars/useCases/createCategory/CreateCategoryController';
 import ImportCategoryController from '../modules/cars/useCases/importCategory/ImportCategoryController';
 import ListCategoriesController from '../modules/cars/useCases/listCategories/ListCategoriesController';
 
@@ -19,6 +19,10 @@ categoriesRoutes.post('/', createCategoryController.handle);
 
 categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
+categoriesRoutes.post(
+  '/import',
+  upload.single('file'),
+  importCategoryController.handle,
+);
 
 export default categoriesRoutes;
